syntax = "proto3";
package kase;

option go_package = "github.com/gernest/rbf/dsl/kase";

message Model {
  Enum enum
  = 1;
  enum Enum {
    none = 0;
    zero = 1;
    one = 2;
  }
  bool bool = 2;
  string string = 3;
  bytes blob = 4;
  int64 int64 = 5;
  uint64 uint64 = 6;
  double double = 7;
  repeated string set = 8;
  repeated bytes blob_set = 9;
}
